--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "set PORT=3001 && next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "set PORT=3001 && next start",
     "lint": "next lint"
   },
   "dependencies": {
